# Nadir

./: .gitignore  CMakeLists.txt
include/: globals.h  material.h
src/: database.cpp  main.cpp  mathutil.cpp  selector.cpp
